--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav class="navbar">
                 <a href="#" class="link">Get the app</a>
                 <div class="navbar--menu-container">
-                    <a href="#" class="link">Inverstor Relations</a>
+                    <a href="#" class="link">Investors Relations</a>
                     <a href="#" class="link">Add Restaurant</a>
                     <a href="#" class="link">Login</a>
                     <a href="#" class="link">Sign up</a>
@@ -24,6 +24,20 @@
                 </div>
             </nav>
         </header>
+        <div class="hero--section-container">
+            <img class="hero--section-logo" src="images/heroSectionLogo.png" alt="zomato Logo" />
+            <h1 class="hero--section-heading">Discover the best food & drinks in Pune</h1>
+            <div class="hero--section-input-container">
+                <div class="hero--section-input-plus-location">
+                <div class="location-icon"><i class="fa-solid fa-location-dot"></i></div>
+                <input class="hero--section-input-location"type="text" placeholder="Pune">
+                </div>
+                <div class="hero--section-input-plus-search">
+                <div class="search-icon"><i class="fa-solid fa-magnifying-glass"></i></div>
+                <input class="hero--section-input-search"type="text" placeholder="Search for Restaurant,quizine or a dish">
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 </html>
