we offer and collections section completed

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" type="image/x-icon" href="https://www.google.com/imgres?imgurl=https%3A%2F%2Fupload.wikimedia.org%2Fwikipedia%2Fcommons%2Fthumb%2F9%2F92%2FZomato.svg%2F1200px-Zomato.svg.png&imgrefurl=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3AZomato.svg&tbnid=FD-Hp5bMGGccMM&vet=12ahUKEwisiaXZ9535AhV5ntgFHQh2DYEQMygCegUIARDbAQ..i&docid=j4ZSu71FBeZknM&w=1200&h=1200&q=zomato%20favicon&ved=2ahUKEwisiaXZ9535AhV5ntgFHQh2DYEQMygCegUIARDbAQ">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Zomato Clone</title>
 </head>
@@ -39,5 +40,74 @@
             </div>
         </div>
     </section>
+
+    <section class="container we--offer">
+        <div class="card">
+            <img src="images/item1.png" alt="" />
+            <h3>Online Order</h3>
+            <p>Stay home and order to your doorstep</p>
+        </div>
+
+        <div class="card">
+            <img src="images/item2.png" alt="" />
+            <h3>Dining</h3>
+            <p>View the city's favorite dining View</p>
+        </div>
+
+        <div class="card">
+            <img src="images/item3.png" alt="" />
+            <h3>Nightlife and Clubs</h3>
+            <p>Explore the city's best nightlife outlets</p>
+        </div>
+    </section>
+
+    <section class = "container collections--container">
+        <h1>Collections</h1>
+        <div class="sub-heading--container">
+            <span>Explore curated lists of top restaurants, cafes, pubs, and bars in Pune, based on trends</span>
+            <span>All collections in Pune</span>
+        </div>
+            <div class="collection-card-container">
+
+                <div class="card card1">
+                    <div class="overlay">
+                        <div class="content">
+                            <h4>Newly Opened</h4>
+                            <p>14 Places</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card2">
+                    <div class="overlay">
+                        <div class="content">
+                            <h4>Trending This Week</h4>
+                            <p>30 Places</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card3">
+                    <div class="overlay">
+                        <div class="content">
+                            <h4>Best Of Pune</h4>
+                            <p>98 Places</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card4">
+                    <div class="overlay">
+                        <div class="content">
+                            <h4>Most Romantic Restaurants</h4>
+                            <p>28 Places</p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        
+   </section>
 </body>
 </html>
