Get the app completed

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <title>Zomato Clone</title>
 </head>
 <body>
+    <!-- hero sections -->
     <section class="hero--section">
         <header>
             <nav class="navbar">
@@ -40,7 +41,7 @@
             </div>
         </div>
     </section>
-
+<!-- we offer section -->
     <section class="container we--offer">
         <div class="card">
             <img src="images/item1.png" alt="" />
@@ -60,7 +61,7 @@
             <p>Explore the city's best nightlife outlets</p>
         </div>
     </section>
-
+<!-- collections section -->
     <section class = "container collections--container">
         <h1>Collections</h1>
         <div class="sub-heading--container">
@@ -109,7 +110,7 @@
             </div>
         
    </section>
-
+<!-- localities section -->
    <section class="container localities--container">
     <div class="localities--heading-container">
         <h2>Popular localities in and around <span>Pune</span></h2>
@@ -196,6 +197,43 @@
     </div>
     </div>
 
+   </section>
+<!-- get the zomato app section -->
+   <section class="container get--the-app">
+    <div class="semiContainer">
+        <div class="left">
+            <img src="images/mobileBanner.png" alt="mobile-banner" />
+        </div>
+        <div class="right">
+            <div class="app--container-heading">
+            <h1>Get the Zomato app</h1>
+            <p>We will send you a link, open it on your phone to download the app</p>
+            </div>
+            <div class="radio--container">
+                <div class="input--radio">
+                    <input type="radio" name="download-app" id="phone">
+                    <label for="phone" >Phone</label>
+                </div>
+                <div class="input--radio">
+                    <input type="radio" name="download-app" id="email">
+                    <label for="email" >Email</label>
+                </div>
+            </div>
+            <div class="input--bar-container">
+                <input type="text" name="Email" id="" placeholder="Email">
+                <button type="submit">Share app link</button>
+            </div>
+
+            <div class="download--app-from">
+                <p>Download app from</p>
+                <div class="images--container">
+                    <img src="images/appleStore.png" alt="apple-store" >
+                    <img src="images/playStore.png" alt="play-store" >
+                </div>
+            </div>
+        </div>
+       
+    </div>
    </section>
 </body>
 </html>
