Explore near me completed

--- a/index.html
+++ b/index.html
@@ -235,5 +235,29 @@
        
     </div>
    </section>
+   <!-- Explore options near me -->
+   <section class = "container explore--near-me">
+    <h1>Explore options near me</h1>
+    <div class="explore-options">
+        <h4>Popular cuisines near me</h4>
+        <i class="fa-solid fa-angle-down"></i>
+    </div>
+
+    <div class="explore-options">
+        <h4>Popular restaurant types near me</h4>
+        <i class="fa-solid fa-angle-down"></i>
+    </div>
+
+    <div class="explore-options">
+        <h4>Top Restaurant Chains</h4>
+        <i class="fa-solid fa-angle-down"></i>
+    </div>
+
+    <div class="explore-options">
+        <h4>Cities We Deliver To</h4>
+        <i class="fa-solid fa-angle-down"></i>
+    </div>
+    
+   </section>
 </body>
 </html>
